--- a/index.html
+++ b/index.html
@@ -180,10 +180,51 @@
 
     <section class="galeria contenedor">
       <h3>Galería</h3>
-      <ul class="galeria-imagenes">
-        
-      </ul>
+      <ul class="galeria-imagenes"></ul>
     </section>
-    <script src="build/js/app.js"></script>>
+
+    <section class="boletos bg-verde">
+      <h3>Boletos</h3>
+      <div class="contenedor contenedor-boletos">
+        <div class="basico pase">
+          <p class="nombre-pase">Pase 1 Dia</p>
+          <header class="pase-header">
+            <p>Incluye</p>
+          </header>
+            <div class="pase-body">
+              <ul>
+                <li>Acceso a ambos escenarios</li>
+                <li>Comida y bebida</li>
+              </ul>
+            </div>
+          <footer class="pase-footer">
+            <p>$100</p>
+          </footer>
+        </div>
+        <div class="premium pase">
+          <p class="nombre-pase">Pase 2 Dias</p>
+          <header class="pase-header">
+            <p>Incluye</p>
+          </header>
+          <div class="pase-body">
+            <ul>
+              <li>Acceso a ambos escenarios</li>
+              <li>Comida y bebida</li>
+              <li>Camisa del evento</li>
+              <li>Acceso a VIP </li>
+            </ul>
+          </div>
+          <footer class="pase-footer">
+            <p>$180</p>
+          </footer>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <p>Rock & EDM Festival. Todos Los Derechos Reservados</p>
+    </footer>
+
+    <script src="build/js/app.js"></script>
   </body>
 </html>
